fix overflowing words

--- a/app/assets/stylesheets/components/_card_joined_demo.scss
+++ b/app/assets/stylesheets/components/_card_joined_demo.scss
@@ -1,6 +1,6 @@
 .container_joined_demo {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   border: 1px solid #ccc;
   padding: 16px;
@@ -12,11 +12,12 @@
   gap: 16px;
   flex: 1 0 0;
   width: 100%;
-  height:100px;
+  height:fit-content;
 }
 
   .description_joined_demo {
   padding-top: 0px;
+  word-break: break-all;
   }
 
   .datetime {
